<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:src="@drawable/soldiers"
            android:scaleType="centerCrop"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro" />
        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_general" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Answer Here"
            android:inputType="text" />
        <Button
            android:id="@+id/btPress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="@string/SubmitAns" />
        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UKUS" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:onClick="onRadioButtonClicked"
                android:id="@+id/yes_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TF1"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:onClick="onRadioButtonClicked"
                android:id="@+id/no_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TF2"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Marines" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:onClick="onRadioButtonClicked1"
                android:id="@+id/yes_radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TF1"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:onClick="onRadioButtonClicked1"
                android:id="@+id/no_radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TF2"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Armata" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:onClick="onRadioButtonClicked2"
                android:id="@+id/yes_radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TF1"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:onClick="onRadioButtonClicked2"
                android:id="@+id/no_radio_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TF2"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>


        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ColdWar" />

            <CheckBox
                android:id="@+id/soviet_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/SOV"
                android:textSize="16sp" />

        <CheckBox
            android:id="@+id/gbr_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/GBR"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/wgm_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/WGM"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/prona_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/PRC"
            android:textSize="16sp" />

        <Button
            android:id="@+id/submit1_button2"
            android:onClick = "checkBoxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SubmitAns" />
        <Button
            android:id="@+id/submit1_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="@string/SubmitReceive" />


    </LinearLayout>
</ScrollView>